Add operational time range filter
